# wiki-genres-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: PLAN.md  PLAYLIST_REVIEW_CHATGPT_PRO.md  REGION_FINAL_PIPELINE.md  TIMELINE_MAP_PLAN.md  UI_PLAN.md
migrations/: 0001_initial.sql  0002_pageviews.sql  0003_non_genre_flag.sql  0004_curate_non_genres.sql  0005_inbound_index_source.sql  0006_related_genre_relation.sql  0007_edge_evidence_relation.sql  0008_ignore_cyclic_edges.sql  0009_music_reachability.sql  0010_effective_display_edges.sql  0011_page_link_crawl_fetch_source.sql  0012_manual_curation_edges.sql  0013_genre_similarity_colors.sql  0014_genre_youtube_playlists.sql  0015_region_graph.sql  0016_region_discovery_candidates.sql  0017_region_genre_relationships.sql  0018_region_relationship_review.sql  0019_merge_candidates_tree_review.sql  0020_region_merge_tree_review.sql  0021_resolve_region_review_findings.sql  0022_resolve_residual_region_merge_candidates.sql  0023_review_remaining_region_tree.sql  0024_connect_remaining_orphan_regions.sql  0025_finalize_remaining_region_review_state.sql  0026_promote_regions_to_genres.sql  0027_timeline_year_hints.sql  0028_region_style_mentions.sql  0029_region_inferred_genres.sql  0030_region_production_review.sql  0031_accept_youtube_music_playlist_urls.sql  0031_city_region_visibility.sql  0032_timeline_year_windows.sql  0033_timeline_beginning_relevance_windows.sql  0034_allow_blank_playlist_artists.sql  0035_youtube_embed_preflight.sql  0036_youtube_embed_preflight_nullable.sql  0037_youtube_playback_error_stats.sql  0038_origin_parent_reachability.sql  0039_playlist_discovery_version.sql  (+16 more)
scripts/: generate_region_docs.py  generate_static_cloud_backgrounds.py
tests/: test_api_regional_variants.py  test_bootstrap_filters.py  test_curation_rules.py  test_cycle_guard.py  test_db_migrations.py  test_genre_colors.py  test_genre_direction_guard.py  test_genre_playlists.py  test_inbound_indexer.py  test_merge_review.py  test_music_reachability.py  test_parser.py  test_playlist_visibility.py  test_progressive_render.py  test_pure_region_graph.py  test_region_discovery.py  (+12 more)
(+57 files in other folders)
