[project]
name = "wiki-genres"
version = "0.0.1"
description = "Continuously-synced mirror of Wikipedia's music-genre graph."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "koopakondra", email = "koopakondra@gmail.com" },
]
keywords = ["wikipedia", "wikidata", "music", "genre", "graph"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Sociology",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "socksio>=1.0",
    "mwparserfromhell>=0.6.6",
    "structlog>=24.4",
    "typer>=0.13",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx[testing]>=0.27",
]

[project.scripts]
wiki-genres = "wiki_genres.cli:app"

[project.urls]
Homepage = "https://github.com/alextyang/wiki-genres-project"
Repository = "https://github.com/alextyang/wiki-genres-project"
Issues = "https://github.com/alextyang/wiki-genres-project/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_genres"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = [
    "S101",     # allow assert in tests
    "B008",     # FastAPI/Typer intentionally use Depends/Query/Option defaults
    "ASYNC109", # httpx timeout parameters are intentional here
    "ASYNC240", # migration discovery is startup-time filesystem work
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"src/wiki_genres/api/routes/genres.py" = ["S608"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
